--- a/Assets/_Project/Scripts/UI Components/PlayerWindow/Styles/PlayerStyle.uss
+++ b/Assets/_Project/Scripts/UI Components/PlayerWindow/Styles/PlayerStyle.uss
@@ -49,6 +49,11 @@
     border-bottom-left-radius: 8px;
     background-image: url('project://database/Assets/_Project/Sprites/DummyPreview.jpg?fileID=2800000&guid=91dbdbe315799a2429f189347682797b&type=3#DummyPreview');
     overflow: hidden;
+    -unity-background-scale-mode: stretch-to-fill;
+    transition-property: opacity, translate, width, height;
+    transition-duration: 0.5s, 0.5s, 0.5s, 0.5s;
+    transition-timing-function: ease-out-cubic, ease-out-cubic, ease-out-cubic, ease-out-cubic;
+    transition-delay: 0s, 0s, 0s, 0s;
 }
 
 .PlayerContainer > .VideoOutput > .Header {
@@ -178,4 +183,18 @@
 }
 
 .MyDropdown {
+}
+
+.VideoOutput--Up {
+    translate: 0 -163px;
+    opacity: 0;
+    transition-duration: 0.5s, 0.5s;
+    transition-timing-function: ease-out-cubic, ease-out-cubic;
+    transition-delay: 0s, 0s;
+    transition-property: opacity, translate;
+}
+
+.PlayerContainer > .VideoOutput--FullScreen {
+    width: 100%;
+    height: 100%;
 }
